# traefik-pages

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  latest-deploy.yml  release.yml
example/: docker-compose.yml
example/sites/localhost/: index.html
example/sites/localhost/sub/: index.html
example/sites/no-index.localhost/: pages.toml
example/sites/site1.localhost/: index.html
example/traefik/: file-provider.yml  traefik.yml
src/: app.rs  auth.rs  config.rs  files.rs  main.rs  settings.rs  site.rs  site_config.rs  sites.rs  test_utils.rs  utils.rs
src/routes/: health.rs  mod.rs  serve.rs  sites.rs  traefik.rs
