[package]
name = "traefik-pages"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
log = "0.4.11"
actix-rt = "1.1.1"
