[package]
name = "traefik-pages"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
log = "0.4.11"
tokio = { version = "0.2.6", features = ["fs"] }
actix-files = "0.4.1"
serde_json = "1.0.59"
serde = "1.0.116"
actix-web-httpauth = "0.5.0"
constant_time_eq = "0.1.5"
url = "2.1.1"

[dev-dependencies]
tokio = { version = "0.2.6", features = ["macros"] }
