[package]
name = "traefik-pages"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "0.2.25", features = ["fs"] }
actix-files = "0.5.0"
serde_json = "1.0"
serde = "1.0"
actix-web-httpauth = "0.5.0"
constant_time_eq = "0.2.2"
url = "2.2.2"
toml = "0.5.9"
serde_derive = "1.0"

[dev-dependencies]
tokio = { version = "0.2.25", features = ["macros"] }
